refactoring header/hero

--- a/index.html
+++ b/index.html
@@ -27,69 +27,71 @@
         <link href="assets/css/queries.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
-        <header>
-            <nav class="nav-menu">
-                <ul class="nav-menu__wrapper">
-                    <div class="wrapper--logo">
-                        <li>
-                            <img
-                                class="img-logo"
-                                src="assets/img/vector/default-monochrome-white.svg"
-                                alt=""
-                                srcset=""
-                            />
-                        </li>
-                    </div>
-                    <div class="wrapper--section">
-                        <li class="wrappper--section__link">
-                            <a href="#">Menu</a>
-                        </li>
-                        <li class="wrappper--section__link">
-                            <a href="#">Bar</a>
-                        </li>
-                        <li class="wrappper--section__link">
-                            <a href="#">About</a>
-                        </li>
-                    </div>
-
-                    <li class="wrappper--section__link">
-                        <a href="#">MAKE A RESERVATION</a>
+        <nav class="nav-menu">
+            <ul class="nav-menu__wrapper">
+                <div class="wrapper--logo">
+                    <li>
+                        <img
+                            class="img-logo"
+                            src="assets/img/vector/default-monochrome-white.svg"
+                            alt=""
+                            srcset=""
+                        />
                     </li>
-
-                    <div class="wrapper--social">
-                        <li class="wrapper--social__link">
-                            <a href="#"
-                                ><ion-icon name="logo-twitter"></ion-icon
-                            ></a>
-                        </li>
-                        <li class="wrapper--social__link">
-                            <a href="#"
-                                ><ion-icon name="logo-instagram"></ion-icon
-                            ></a>
-                        </li>
-                        <li class="wrapper--social__link">
-                            <a href="#"
-                                ><ion-icon name="logo-facebook"></ion-icon
-                            ></a>
-                        </li>
-                    </div>
-                </ul>
-                <div class="hamburger">
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                    <span class="bar"></span>
                 </div>
-            </nav>
+                <div class="wrapper--section">
+                    <li class="wrappper--section__link">
+                        <a href="#">Menu</a>
+                    </li>
+                    <li class="wrappper--section__link">
+                        <a href="#">Bar</a>
+                    </li>
+                    <li class="wrappper--section__link">
+                        <a href="#">About</a>
+                    </li>
+                </div>
 
-            <div class="hero-text-box">
-                <h1>Albano's</h1>
-                <h2>Pub and Pizza</h2>
+                <li class="wrappper--section__link">
+                    <a href="#">MAKE A RESERVATION</a>
+                </li>
+
+                <div class="wrapper--social">
+                    <li class="wrapper--social__link">
+                        <a href="#"
+                            ><ion-icon name="logo-twitter"></ion-icon
+                        ></a>
+                    </li>
+                    <li class="wrapper--social__link">
+                        <a href="#"
+                            ><ion-icon name="logo-instagram"></ion-icon
+                        ></a>
+                    </li>
+                    <li class="wrapper--social__link">
+                        <a href="#"
+                            ><ion-icon name="logo-facebook"></ion-icon
+                        ></a>
+                    </li>
+                </div>
+            </ul>
+            <div class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
             </div>
-            <div class="hero-buttons">
-                <a href="#" class="btn btn-hero btn-hero-red"
-                    >Make a reservation</a
-                >
-                <a href="#" class="btn btn-hero">Order now!</a>
+        </nav>
+
+        <header class="hero-header">
+            <div class="hero-header__wrapper">
+                <div class="hero-text-box">
+                    <h1>Albano's</h1>
+                    <h2>Pub and Pizza</h2>
+                </div>
+                <div class="hero-buttons">
+                    <a href="#" class="btn btn-hero btn-hero-red"
+                        >Make a reservation</a
+                    >
+                    <a href="#" class="btn btn-hero">Order now!</a>
+                </div>
             </div>
         </header>
 
