refactoring about section

--- a/index.html
+++ b/index.html
@@ -95,13 +95,9 @@
             </div>
         </header>
 
-        <section class="section section-about">
-            <div class="section-about">
-                <img
-                    class="about-img"
-                    src="assets/img/aleksandra-king.jpg"
-                    alt=""
-                />
+        <section class="section-about">
+            <div class="about-img">
+                <img src="assets/img/aleksandra-king.jpg" alt="" />
             </div>
 
             <div class="about-content">
@@ -113,18 +109,18 @@
                         destination.
                     </p>
                     <p>
-                        My name is Aleksandra King and i'm the owner of the
+                        My name is Aleksandra King and I'm the owner of the
                         restaurant, after a series of wonderful and sometimes
-                        difficult years of my life, i decided to pursue my dream
+                        difficult years of my life, I decided to pursue my dream
                         and become a chef by profession.
                     </p>
 
                     <p>
-                        There are so many things i would like to tell you, so i
+                        There are so many things I would like to tell you, so I
                         would like to start with the basics.
                     </p>
 
-                    <p>Why i chose food as a career?</p>
+                    <p>Why I chose food as a career?</p>
 
                     <p>
                         I always followed my heart, and that worked out for me.
