refactoring pizza-section

--- a/index.html
+++ b/index.html
@@ -140,38 +140,47 @@
         <section class="section section-pizza">
             <div class="pizza-container">
                 <div class="pizza-title">
-                    <img class="pizza-img" src="assets/img/menu-small.jpg" />
                     <h4 class="pizza-heading heading">Feeling hungry?</h4>
+                    <img class="pizza-img" src="assets/img/menu-small.jpg" />
                 </div>
                 <div class="pizza-content">
-                    <h4>Pomodoro</h4>
-                    <span>Tomato sauce, olive oil, dried herbs</span>
+                    <ul class="pizza-menu">
+                        <li class="pizza-menu__item">
+                            <h4>Pomodoro</h4>
+                            <span>Tomato sauce, olive oil, dried herbs</span>
+                        </li>
+                        <li class="pizza-menu__item">
+                            <h4>Prosciutto & Arugula</h4>
+                            <span
+                                >Béchamel, mozzarella, prosciutto di parma,
+                                dressed arigula</span
+                            >
+                        </li>
+                        <li class="pizza-menu__item">
+                            <h4>La Caprina</h4>
+                            <span
+                                >Tomato sauce, goat's cheese, double smoked
+                                bacon, fire roasted peppers</span
+                            >
+                        </li>
+                        <li class="pizza-menu__item">
+                            <h4>Pepperoni</h4>
+                            <span
+                                >Tomato sauce, mozzarella, dry cured pepperoni,
+                                parsley</span
+                            >
+                        </li>
+                        <li class="pizza-menu__item">
+                            <h4>Funghi</h4>
+                            <span
+                                >Tomato sauce, mozarella, goat's cheese,
+                                seasonal sautéed mushrooms, garlic butter</span
+                            >
+                        </li>
+                    </ul>
 
-                    <h4>Prosciutto & arugula</h4>
-                    <span
-                        >Béchamel, mozzarella, prosciutto di parma, dressed
-                        arigula</span
-                    >
-
-                    <h4>La caprina</h4>
-                    <span
-                        >Tomato sauce, goat's cheese, double smoked bacon, fire
-                        roasted peppers</span
-                    >
-
-                    <h4>Pepperoni</h4>
-                    <span
-                        >Tomato sauce, mozzarella, dry cured pepperoni,
-                        parsley</span
-                    >
-
-                    <h4>Funghi</h4>
-                    <span
-                        >Tomato sauce, mozarella, goat's cheese, seasonal
-                        sautéed mushrooms, garlic butter</span
-                    >
+                    <a href="#" class="btn pizza-btn">Order now!</a>
                 </div>
-                <a href="#" class="btn pizza-btn">Order now!</a>
             </div>
         </section>
 
