refactoring drink-section

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             </div>
         </section>
 
-        <section class="section section-drinks">
+        <section class="section-drinks">
             <div class="drink-container">
                 <div class="drink-title">
                     <img src="assets/img/drinks.jpg" class="drink-img" />
@@ -193,40 +193,48 @@
                     </h4>
                 </div>
                 <div class="drink-content">
-                    <h4>Vodka martini</h4>
-                    <span
-                        >60ml vodka, 1 tbsp dry vermouth, olive or lemon peel,
-                        to garnish</span
-                    >
-
-                    <h4>Hurricane cocktail</h4>
-                    <span>
-                        50ml dark rum, 50ml white rum, 1 passion fruit, 1 orange
-                        , juiced 1 lemon , juiced 50ml sugar syrup, 2 tsp
-                        grenadine</span
-                    >
-
-                    <h4>Sweet manhattan cocktail</h4>
-                    <span
-                        >50ml bourbon or rye whiskey, 25ml rosso vermouth, 5ml
-                        syrup from a jar of maraschino cherries, 2 dashes
-                        Angostura bitters, ice</span
-                    >
-
-                    <h4>Blueberry mojito</h4>
-                    <span
-                        >100g blueberries, 3 lemons , chopped 2 tbsp granulated
-                        sugar 2 mint sprigs , leaves picked 350ml white rum,
-                        600ml sparkling water</span
-                    >
-
-                    <h4>Black russian cocktail</h4>
-                    <span
-                        >50ml vodka, 25ml coffee liqueur, ice, 1 maraschino
-                        cherry, cola to top up,</span
-                    >
+                    <ul class="drink-menu">
+                        <li class="drink-menu__item">
+                            <h4>Vodka Martini</h4>
+                            <span
+                                >60ml vodka, 1 tbsp dry vermouth, olive or lemon
+                                peel, to garnish</span
+                            >
+                        </li>
+                        <li class="drink-menu__item">
+                            <h4>Hurricane Cocktail</h4>
+                            <span>
+                                50ml dark rum, 50ml white rum, 1 passion fruit,
+                                1 orange, juiced 1 lemon, juiced 50ml sugar
+                                syrup, 2 tsp grenadine</span
+                            >
+                        </li>
+                        <li class="drink-menu__item">
+                            <h4>Sweet Manhattan Cocktail</h4>
+                            <span
+                                >50ml bourbon or rye whiskey, 25ml rosso
+                                vermouth, 5ml syrup from a jar of maraschino
+                                cherries, 2 dashes Angostura bitters, ice</span
+                            >
+                        </li>
+                        <li class="drink-menu__item">
+                            <h4>Blueberry Mojito</h4>
+                            <span
+                                >100g blueberries, 3 lemons, chopped 2 tbsp
+                                granulated sugar 2 mint sprigs, leaves picked
+                                350ml white rum, 600ml sparkling water</span
+                            >
+                        </li>
+                        <li class="drink-menu__item">
+                            <h4>Black Russian Cocktail</h4>
+                            <span
+                                >50ml vodka, 25ml coffee liqueur, ice, 1
+                                maraschino cherry, cola to top up</span
+                            >
+                        </li>
+                    </ul>
+                    <a href="#" class="btn drink-btn">See more</a>
                 </div>
-                <a href="#" class="btn drink-btn">See more</a>
             </div>
         </section>
 
