refactoring section-reserv

--- a/index.html
+++ b/index.html
@@ -239,39 +239,34 @@
         </section>
 
         <section class="section-reserv">
-            <h3 class="reserv-heading">Make a Reservation</h3>
             <div class="reserv-container">
+                <h3 class="reserv-heading">Make a Reservation</h3>
                 <form class="reserv-form" action="#" method="">
-                    <label for="name">Name: </label>
-                    <input class="input" type="text" name="name" />
-
-                    <br />
-
-                    <label for="email">Email: </label>
-                    <input class="input" type="email" name="email" />
-
-                    <br />
-
-                    <label for="tlf">Phone Number: </label>
-                    <input class="input" type="text" name="tlf" />
-
-                    <br />
-
-                    <label for="date">Date</label>
-                    <input
-                        class="input"
-                        type="month"
-                        name="date"
-                        placeholder="yy-mm-dd"
-                    />
-
-                    <br />
-
-                    <label for="date">Time</label>
-                    <input class="input" type="time" name="date" />
-
-                    <br />
-
+                    <div>
+                        <label for="name">Name: </label>
+                        <input class="input" type="text" name="name" />
+                    </div>
+                    <div>
+                        <label for="email">Email: </label>
+                        <input class="input" type="email" name="email" />
+                    </div>
+                    <div>
+                        <label for="tlf">Phone Number: </label>
+                        <input class="input" type="text" name="tlf" />
+                    </div>
+                    <div>
+                        <label for="date">Date</label>
+                        <input
+                            class="input"
+                            type="month"
+                            name="date"
+                            placeholder="yy-mm-dd"
+                        />
+                    </div>
+                    <div>
+                        <label for="date">Time</label>
+                        <input class="input" type="time" name="date" />
+                    </div>
                     <input
                         class="btn-form btn"
                         type="submit"
