--- a/index.html
+++ b/index.html
@@ -41,18 +41,18 @@
                 </div>
                 <div class="wrapper--section">
                     <li class="wrappper--section__link">
-                        <a href="#">Menu</a>
+                        <a href="#menu">Menu</a>
                     </li>
                     <li class="wrappper--section__link">
-                        <a href="#">Bar</a>
+                        <a href="#drinks">Bar</a>
                     </li>
                     <li class="wrappper--section__link">
-                        <a href="#">About</a>
+                        <a href="#about">About</a>
                     </li>
                 </div>
 
                 <li class="wrappper--section__link">
-                    <a href="#">MAKE A RESERVATION</a>
+                    <a href="#form">MAKE A RESERVATION</a>
                 </li>
 
                 <div class="wrapper--social">
@@ -95,7 +95,7 @@
             </div>
         </header>
 
-        <section class="section-about">
+        <section class="section-about" id="about">
             <div class="about-img">
                 <img src="assets/img/aleksandra-king.jpg" alt="" />
             </div>
@@ -137,7 +137,7 @@
             </div>
         </section>
 
-        <section class="section section-pizza">
+        <section class="section section-pizza" id="menu">
             <div class="pizza-container">
                 <div class="pizza-title">
                     <h4 class="pizza-heading heading">Feeling hungry?</h4>
@@ -184,7 +184,7 @@
             </div>
         </section>
 
-        <section class="section-drinks">
+        <section class="section-drinks" id="drinks">
             <div class="drink-container">
                 <div class="drink-title">
                     <img src="assets/img/drinks.jpg" class="drink-img" />
@@ -238,7 +238,7 @@
             </div>
         </section>
 
-        <section class="section-reserv">
+        <section class="section-reserv" id="form">
             <div class="reserv-container">
                 <h3 class="reserv-heading">Make a Reservation</h3>
                 <form class="reserv-form" action="#" method="">
@@ -276,24 +276,34 @@
             </div>
         </section>
         <footer class="footer">
-            <span
-                >Made with &hearts; by Eduardo Vera. &copy; 2021 All Rights
-                Reserved</span
-            >
-            <ul class="footer-links">
-                <li>
-                    <a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
-                </li>
-                <li>
-                    <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
-                </li>
-                <li>
-                    <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
-                </li>
-                <li>
-                    <a href="#"><ion-icon name="logo-whatsapp"></ion-icon></a>
-                </li>
-            </ul>
+            <div class="footer-content">
+                <span
+                    >Made with &hearts; by Eduardo Vera. &copy; 2022 All Rights
+                    Reserved</span
+                >
+                <ul class="footer-links">
+                    <li>
+                        <a href="#"
+                            ><ion-icon name="logo-twitter"></ion-icon
+                        ></a>
+                    </li>
+                    <li>
+                        <a href="#"
+                            ><ion-icon name="logo-instagram"></ion-icon
+                        ></a>
+                    </li>
+                    <li>
+                        <a href="#"
+                            ><ion-icon name="logo-facebook"></ion-icon
+                        ></a>
+                    </li>
+                    <li>
+                        <a href="#"
+                            ><ion-icon name="logo-whatsapp"></ion-icon
+                        ></a>
+                    </li>
+                </ul>
+            </div>
             <img
                 class="img-logo-big"
                 src="assets/img/vector/default-monochrome-white.svg"
